lib: Update dependencies